# user-manager

./: .gitignore  Cargo.toml  LICENCE  README.md  users.json
src/: cli.rs  command.rs  commands.rs  io_utils.rs  lib.rs  macros.rs  main.rs  menu.rs  money.rs  user.rs  user_list.rs  username.rs
src/command/: logger.rs  parser.rs
temp/: Cargo.toml
temp/src/: main.rs
user_manager_macro/: Cargo.toml
user_manager_macro/src/: lib.rs
