workspace = { members = ["user_manager_macro"] }
[package]
name = "user-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
console = "0.15.8"
dialoguer = "0.11.0"
mockall_double = "0.3.1"
proptest = "1.4.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
thiserror = "1.0.56"
user-manager-macro = { path = "./user_manager_macro" }

[dev-dependencies]
mockall = "0.12.1"
